--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,6 +13,7 @@
 
 // Include common definitions from above.
 apply plugin: "com.diffplug.spotless"
+apply plugin: 'kotlin-android'
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
