--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@
  */
 
 buildscript {
+    ext.kotlin_version = '1.9.22'
     repositories {
         mavenCentral()
         google()
@@ -13,6 +14,7 @@ buildscript {
         // Note for FTC Teams: Do not modify this yourself.
         classpath 'com.android.tools.build:gradle:8.7.0'
         classpath "com.diffplug.spotless:spotless-plugin-gradle:6.22.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
